--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: Asgene
-Title: What the Package Does (One Line, Title Case)
+Title: Rapid and accurate arsenic metabolic metagenomic analysis
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Xinwei", "Song", , "12014067@zju.edu.cn", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: A manually curated arsenic functional gene database (AsgeneDB) and R package (Asgen package) are developed for rapid and accurate metagenomic analysis.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
